# DemoWallet

./: README.md  pyproject.toml
apps/accounts/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/disputes/: admin.py  models.py  serializers.py  urls.py  views.py
apps/ledger/: admin.py  models.py  serializers.py  urls.py  views.py
apps/notifications/: context_processors.py  models.py  urls.py  views.py
apps/payments/: admin.py  models.py  serializers.py  urls.py  views.py
apps/transactions/: admin.py  models.py  urls.py  views.py
apps/transfers/: admin.py  forms.py  models.py  serializers.py  urls.py  urls_api.py  views.py
apps/users/: admin.py  apps.py  models.py  serializers.py
apps/web/: urls.py  views.py
apps/web/templates/: base.html  dashboard.html  index.html
apps/web/templates/includes/: navbar.html
apps/web/templates/notification/: list.html
apps/web/templates/transactions/: all_transactions.html  transaction_detail.html
apps/web/templates/transfers/: send_transfer.html
apps/web/templates/wallets/: confirm_delete_wallet.html  create_wallet.html  select_from_wallet.html  topup_wallet.html  transfer_wallet.html  wallet_detail.html  wallets.html
config/: settings.py  urls.py
docker/: docker-compose.yml
static/css/: style.css
static/js/: messages.js
templates/account/: email_confirm.html  login.html  logout.html  signup.html  verification_sent.html
templates/socialaccount/: login.html
